# cve_watch

./: .gitignore  README.md  pyproject.toml  requirements.txt
gui/: AppIcon.icns  Info.plist  Package.swift  build.sh  generate_icon.py  generate_icon.swift
gui/Sources/: AllAppsView.swift  AppDetailView.swift  CVEWatchApp.swift  ContentView.swift  DashboardView.swift  DatabaseReader.swift  DockIconManager.swift  HistoryView.swift  Models.swift  ScannerBridge.swift  VulnerabilityListView.swift
src/: __init__.py  dashboard.py  database.py  main.py  models.py  notifier.py  nvd_client.py  scanner.py
tests/: __init__.py  test_database.py  test_models.py  test_scanner.py
