[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cve-watch"
version = "1.0.0"
description = "macOS application vulnerability monitor with native SwiftUI GUI and NVD CVE database integration"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cve", "vulnerability", "macos", "security", "nvd"]
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
cve-watch = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
